User can edit task, assures the user editing the task is the same that created

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,8 @@
 <%= form_for @task do |f| %>
   <%= f.label :description %>
   <%= f.text_field :description %>
+  <%= f.label :complete %>
+  <%= f.check_box :complete %>
   <%= f.submit %>
 <% end %>
 <p><%= link_to "Back", root_path %></p>
