Adds Tracking of completed and not completed tasks, Tracking needs to be better tested

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <%= render 'shared/navbar' %>
     <% flash.each do |name, msg| -%>
-        <%= content_tag :div, msg, class: name %>
+        <%= content_tag :div, msg, class: "#{name} alert alert-info" %>
       <% end -%>
 
     <div class="container">
