--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
 <h1> List </h1>
 
-<%= link_to 'New task', new_task_path %>
+<%= link_to 'New task', new_task_path, class: 'btn btn-primary btn-sm' %>
 
 <table class="table">
   <thead>
@@ -26,19 +26,10 @@
           </td>
           <td>
             <%= f.submit "Not Complete", class: 'btn btn-outline-secondary btn-sm', 
-                                        id: "complete-#{task.id}"
+                                         id: "complete-#{task.id}"
               %>
           </td>
         <% end %>
-        <td>
-          <%= link_to 'Edit', edit_task_path(task.id), id: "edit-#{task.id}" %>
-        </td>
-        <td>
-          <%= link_to 'Delete', task_path(task.id),method: :delete, 
-                                                 id: "delete-#{task.id}" 
-          %>
-        </td>
-      </tr>
     <% else %>
       <tr>
         <td><%= task.description %></td>
@@ -50,19 +41,22 @@
           </td>
           <td>
             <%= f.submit "Complete", class: 'btn btn-outline-secondary btn-sm',
-                                    id: "complete-#{task.id}"%>
+                                     id: "complete-#{task.id}"%>
           </td>    
         <% end %>
+      <% end %>
         <td>
-          <%= link_to 'Edit', edit_task_path(task.id), id: "edit-#{task.id}" %>
+          <%= link_to 'Edit', edit_task_path(task.id), id: "edit-#{task.id}", 
+                                                       class: 'btn btn-outline-secondary btn-sm'
+          %>
         </td>
         <td>
           <%= link_to 'Delete', task_path(task.id),method: :delete, 
-                                                 id: "delete-#{task.id}" 
+                                                   id: "delete-#{task.id}", 
+                                                       class: 'btn btn-danger btn-sm'
           %>
         </td>
       </tr>
-    <% end %>
   <% end %>  
  </tbody>
 </table>
