--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,6 +1,10 @@
-<%= form_for @task do |f| %>
-  <%= f.label :description %>
-  <%= f.text_field :description %>
-  <%= f.submit %>
-<% end %>
-<p><%= link_to "Back", root_path %></p>
+<div class="p-5">
+  <%= form_for @task do |f| %>
+    <%= f.label :description, class: "form-label" %>
+    <%= f.text_field :description, class: "form-control" %>
+    <%= f.submit "Create Task", class: 'btn btn-success my-3' %>
+  <% end %>
+  <p>
+    <%= link_to "Back", root_path, class: 'btn btn-outline-secondary' %>
+  </p>
+</div>
